@@ -128,7 +128,7 @@ $pgv_lang["ZOOM_BOXES_help"]		= "~#pgv_lang[ZOOM_BOXES]#~<br /><br />Erlaubt dem
 $pgv_lang["LINK_ICONS"]			= "PopUp Links in Diagrammen";
 $pgv_lang["LINK_ICONS_help"]		= "~#pgv_lang[LINK_ICONS]#~<br /><br />Erlaubt die Auswahl von Links zu anderen Diagrammen und zu nahen Verwandten einer Person. Auf «Deaktiviert» stellen, um dieses Feature abzuschalten.Auf «MouseOver» stellen, um ein Popup-Fenster mit den Links anzuzeigen, wenn der Benutzer mit der Maus über das Symbol in der Personen-Box fährt. Auf  «Click» stellen, um das Popup-Fenster durch Klick auf das Symbol aufzurufen.<br />";
 $pgv_lang["ABBREVIATE_CHART_LABELS"]			= "Bezeichnungen in Diagrammen abkürzen";
-$pgv_lang["ABBREVIATE_CHART_LABELS_help"]		= "~#pgv_lang[ABBREVIATE_CHART_LABELS]#~<br /><br />Legt fest, ob in den Diagrammen Bezeichnungen wie 'Geburt' nur mit dem Anfangsbuchstaben ('G') abgekürzt werden.<br />";
+$pgv_lang["ABBREVIATE_CHART_LABELS_help"]		= "~#pgv_lang[ABBREVIATE_CHART_LABELS]#~<br /><br />Bestimmt, ob in den Diagrammen Bezeichnungen wie <b>Geburt</b> nur mit ihrem Anfangsbuchstaben <b>G</b> abgekürzt werden.<br /><br />Sie können Ihre eigenen Abkürzungen durch entspechende Einträge in der <i>languages/extra.xx.php</i> Datei für jede Sprache bestimmen.  Zum Beispiel, wenn Sie in der deutschen Sprache das Zeichen <b>*</b> als Abkürzung für den BIRT Fakt benutzen möchten, müssen Sie folgende Zeile in die <i>languages/extra.de.php</i> Data einfügen:<br /><br /><code>\$factAbbrev[\"BIRT\"]&nbsp;=&nbsp;\"*\";</code><br /><br />Die Längen solcher Abkürzungen sind nicht auf ein Zeichen oder Buchstaben beschränkt.<br />";
 $pgv_lang["SHOW_AGE_DIFF"]					= "Datendifferenzen zeigen";
 $pgv_lang["SHOW_AGE_DIFF_help"]				= "~#pgv_lang[SHOW_AGE_DIFF]#~<br /><br />Diese Option bestimmt, ob der «Direkte Verwandtschaft» Ordner der «Persönliche Informationen» Seite Differenzen zwischen Geburtsdaten der Gatten, zwischen Ehedatum und Geburtsdatum des ersten Kindes, und zwischen Geburtsdaten der Geschwister zeigen soll oder nicht.<br />";
 $pgv_lang["SHOW_PARENTS_AGE"]				= "Alter der Eltern bei der Geburt eines Kindes zeigen";
